# CPACM

./: .gitignore  CPA-Codex-Manager-Desktop.spec  Dockerfile  README.md  desktop.py  pyproject.toml  register.py  requirements.txt  webui.py
.github/workflows/: desktop-build.yml  docker.yml
assets/macOS/: AppIcon.icns
scripts/: build_macos_dmg.sh  build_windows.bat  generate_macos_icon.swift  generate_windows_icon.py
src/database/: session.py
src/web/: app.py
src/web/routes/: cliproxy.py  registration.py
static/js/: app.js  cliproxy.js
templates/: accounts.html  email_services.html  settings.html
